# finn-base

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.md  LICENSE.txt  README.md  README.rst  run-docker-test.sh  run-docker.sh  setup.cfg  setup.py
.github/workflows/: ci-pipeline.yml  pre-commit.yml  python-publish.yml  quicktest-dev-pr.yml
docker/: Dockerfile  Dockerfile.ci  build_docs.sh  docsbuild.sh  entrypoint.sh  quicktest.sh  requirements.txt  run_tests.sh
docs/: Makefile  binary_quant_op.md  conf.py  index.rst  license.rst  quant_op.md  trunc_op.md  tutorials.rst
docs/QONNX/: bipolar_quant_op.md  quant_op.md  trunc_op.md
src/: __init__.py
src/finn/analysis/: __init__.py  base.py  inference_cost.py  topology.py
src/finn/core/: __init__.py  data_layout.py  datatype.py  execute_custom_node.py  modelwrapper.py  onnx_exec.py  remote_exec.py  rtlsim_exec.py  throughput_test.py
src/finn/custom_op/: __init__.py  base.py  debugmarker.py  im2col.py  maxpoolnhwc.py  multithreshold.py  quantavgpool2d.py  registry.py  streamingdataflowpartition.py  xnorpopcount.py
src/finn/custom_op/general/: __init__.py  binary_quant.py  bipolar_quant.py  debugmarker.py  genericpartition.py  im2col.py  maxpoolnhwc.py  multithreshold.py  nhwc_wrapper.py  quant.py  quantavgpool2d.py  streamingdataflowpartition.py  trunc.py  truthtable.py  xnorpopcount.py
src/finn/custom_op/logicnets/: binary_truthtable.py  truthtable.py
src/finn/data/verilog/lookup/: Lookup_0.v  Lookup_0_Lookup_0_Pipeline_VITIS_LOOP_28_1.v  (+6 more)
src/finn/finn_base/: __init__.py  skeleton.py
src/finn/transformation/: __init__.py  base.py  batchnorm_to_affine.py  bipolar_to_xnor.py  change_3d_tensors_to_4d.py  change_datalayout.py  create_generic_partitions.py  double_to_single_float.py  extend_partition.py  extract_conv_bias.py  fold_constants.py  gemm_to_matmul.py  gen_verilog_truth.py  general.py  infer_data_layouts.py  infer_datatypes.py  infer_shapes.py  insert_topk.py  lower_convs_to_matmul.py  make_input_chanlast.py  merge_onnx_models.py  nhwc.py  remove.py
src/finn/transformation/logicnets/: gen_bintruthtable_verilog.py  gen_logicnets_verilog.py  gen_truthtable_pla.py  gen_truthtable_verilog.py
src/finn/util/: basic.py  config.py  create.py  data_packing.py  fpgadataflow.py  hls.py  inference_cost.py  onnx.py  platforms.py  pyverilator.py  vivado.py
src/finn/util/logicnets/: logicnets.py
src/qonnx/custom_op/nhwc/: __init__.py  wrapped_ops.py
tests/: conftest.py  test_skeleton.py
tests/analysis/: test_is_linear.py  test_topology_checks.py
tests/core/: test_basic_onnx_exec.py  test_custom_onnx_exec.py  test_datatypes.py  test_mixed_onnx_exec.py  test_modelwrapper.py
tests/custom_op/: test_binarytruthtable.py  test_im2col.py  test_multithreshold.py  test_quant.py  test_truthtable.py  test_xnorpopcountmatmul.py
tests/logicnets-initial-model/: after-datatypes.onnx  after-shape.onnx  after-uniquenames.onnx  concat_test.py  custom_model.py  gather_test.py  simple-model.onnx
tests/transformation/: test_4d_conversion.py  test_batchnorm_to_affine.py  test_change_datalayout.py  test_conv_lowering.py  test_extend_partition.py  test_fold_constants.py  test_general_transformation.py  test_generic_partitioning.py  test_infer_data_layouts.py  test_infer_datatypes.py  test_infer_shapes.py  test_logicnets_verilog.py  test_make_input_chanlast.py  test_merge_onnx_models.py  test_remove_identity_ops.py  test_renaming.py  test_sort_graph.py  test_topk_insert.py
tests/util/: test_create.py  test_data_packing.py  test_gen_finn_dt_tensor.py  test_padding.py  test_pyverilator.py  test_pyverilog_binarytruthtable.py  test_rtlsim2npy.py  test_shape_utils.py
(+3 files in other folders)
