# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = finn-base
description = Components for ONNX graph manipulation and custom execution
author = Yaman Umuroglu
author-email = yamanu@xilinx.com
license = new-bsd
long-description = file: README.md
long-description-content-type = text/markdown
url = https://xilinx.github.io/finn/
project-urls =
    Documentation = https://finn-base.readthedocs.io/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Linux
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Operating System :: POSIX :: Linux

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    bitstring>=3.1.7
    numpy>=1.19.2
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install finn-base[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
pyverilator =
    pyverilator @ https://github.com/maltanar/pyverilator/tarball/master#egg=pyverilator"
docs =
    sphinx>=3.2.1
    sphinx_rtd_theme>=0.5.0
onnx =
    onnx==1.7.0
    onnxruntime==1.4.0
    toposort>=1.5.0
testing =
    pytest
    pytest-cov

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = finn.finn_base.module:function
# For example:
# console_scripts =
#     fibonacci = finn.finn_base.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov finn --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel
docs = build_sphinx

[bdist_wheel]
# Use this option if your package is pure-python
universal = 0

[build_sphinx]
source-dir = docs
build-dir = docs/_build
warning-is-error = True
keep-going = True

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max-line-length = 88
extend-ignore = E203
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = finn_base
extensions =
    namespace
    pre_commit
namespace = finn
